V1.3.0
Changelog
• Dyed Decorated Pots now have native sherd support! (Supports sherds from all mods!)
• Dyed Decorated Pots base material is now rendered the same way the sides are.
• Dyed Decorated Pots now work with texture packs when they modify the palette texture!
• Added a config option to enable or disable Chalk Sticks!
• Updated zh_cn translations.
• Code Cleanup


Mentions
• A special thanks to @Takiaaa for updating zh_cn.json translations!
• A special thanks to IwasConfused for turning the updated zh_cn.json into a GitHub pull request!
• A special thanks to Iamnotagenius for allowing me to use their config code for Fabric!







V1.2.0
• Fixed an issue with loot table modifiers, link to issue report: https://github.com/KekeCreations/Arts-and-Crafts/issues/27
• Fixed an issue with paintbrush compat where block entities with inventories would get their inventory cleared.
• Added translated for zh_cn.json (Thank you IwasConfused!)




V1.1.9
• Fixed Dyed Potted Fern not rendering properly
• Fixed Dyed Potted Mangrove Propagule not rendering properly
• Added Portuguese Brazilian translations
• Chalk Sticks now work while flying
• Made chalk blobs generate more often in mountains
• Made chalk now replace all blocks in the #minecraft:base_stone_overworld tag
• Made gypsum generate in biomes with a Desert Temple



V1.1.8
• Fixed Cork Log & Stripped Cork Log having the wrong sounds

V1.1.7
• Fixed all stonecutter slab recipes in the mod giving you the wrong amount of slabs



V1.1.6
• Fixed Glazed Terracotta Texture to allow for more patterns to be made
• Glazed Terracotta now has correct loot table and mining speed




V1.1.5
• Cork Sapling can now be used in the composter
• Cork Leaves can now be used in the composter
• da_dk Translations done by jquann1998!  (Thank you!)


V1.1.4
Bug Fixes
• Fixed missing bleached chalk dust translation
Features
• Changed Paintbrush Recipe
• Added Russian translations (Thank you Arkoto & Clarthen!)




V1.1.2
Bug Fixes