@@ -17,10 +17,10 @@
     "radius": {
       "type": "minecraft:uniform",
       "value": {
-        "min_inclusive": 6,
-        "max_inclusive": 8
+        "min_inclusive": 2,
+        "max_inclusive": 3
       }
     },
-    "half_height": 2
+    "half_height": 1
   }
 }
