@@ -1,5 +1,5 @@
 {
-  "feature": "arts_and_crafts:gypsum_patch",
+  "feature": "arts_and_crafts:chalk_patch",
   "placement": [
     {
       "type": "minecraft:count",
@@ -13,7 +13,7 @@
       "height": {
         "type": "minecraft:uniform",
         "min_inclusive": {
-          "above_bottom": 30
+          "above_bottom": 48
         },
         "max_inclusive": {
           "absolute": 200
@@ -23,10 +23,14 @@
     {
       "type": "minecraft:environment_scan",
       "direction_of_search": "down",
-      "max_steps": 8,
+      "max_steps": 18,
       "target_condition": {
-        "type": "minecraft:matching_blocks",
-        "blocks": "minecraft:sandstone"
+        "type": "minecraft:has_sturdy_face",
+        "direction": "up"
+      },
+      "allowed_search_condition": {
+        "type": "minecraft:matching_block_tag",
+        "tag": "minecraft:base_stone_overworld"
       }
     },
     {
