@@ -6,6 +6,14 @@ Changelog
 • Dyed Decorated Pots base material is now rendered the same way the sides are.
 • Dyed Decorated Pots now work with texture packs when they modify the palette texture!
 • Added a config option to enable or disable Chalk Sticks!
+• Added a config option to enable or disable Dyed Flower Pots!
+• Added a config option to enable or disable Dyed Decorated Pots!
+• Gypsum now generates in disks instead of blobs.
+• Gypsum now generates more often and in bigger patches.
+• Chalk now generates in disks instead of blobs.
+• Chalk now only generates in Stony Peaks & Stony Shores.
+• Chalk generates more often in Stony peaks.
+
 • Updated zh_cn translations.
 • Code Cleanup
 
